feat(data): formatting edits

--- a/notebooks/000_download_datasources.ipynb
+++ b/notebooks/000_download_datasources.ipynb
@@ -180,110 +180,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# subset data inventory to separate include just 'downloads'\n",
-    "cols = ['sub-directory', 'filename', 'zipfile', 'data-url', 'source']\n",
-    "download_df = inventory_df.loc[inventory_df['access']=='download'][cols]\n",
-    "noaa_df = inventory_df.loc[inventory_df['sub-directory']=='noaa'][cols]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sub-directory</th>\n",
-       "      <th>filename</th>\n",
-       "      <th>zipfile</th>\n",
-       "      <th>data-url</th>\n",
-       "      <th>source</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>noaa</td>\n",
-       "      <td>boston-daily-weather-20140101-20191107.csv</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>https://www.ncei.noaa.gov/access/services/data...</td>\n",
-       "      <td>data</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   sub-directory                                    filename  zipfile  \\\n",
-       "29          noaa  boston-daily-weather-20140101-20191107.csv      0.0   \n",
-       "\n",
-       "                                             data-url source  \n",
-       "29  https://www.ncei.noaa.gov/access/services/data...   data  "
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "noaa_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "local_filename, headers = urllib.request.urlretrieve(\n",
-    "        noaa_df['data-url'].values[0],\n",
-    "        os.path.join('noaa-test-download.csv'),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "daily-summaries-2019-11-11T06-59-46.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(headers.get_filename())"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
    "outputs": [],
@@ -316,7 +212,7 @@
     "\n",
     "\n",
     "def download_file(subdir, url, filename, verbose=True,\n",
-    "                  overwrite=False, return_results=False):\n",
+    "                  overwrite=False, return_results=True):\n",
     "    \"\"\"\n",
     "    Downloads a single file to the specified filepath from the given url\n",
     "    \n",
@@ -327,7 +223,7 @@
     "    overwrite: boolean, default=False, if True will overwrite existing local\n",
     "               copy of the file, if False will only download file if it's\n",
     "               filepath does not already exists\n",
-    "    return_results: boolean, default=False, if True returns new local filename\n",
+    "    return_results: boolean, default=True, if True returns new local filename\n",
     "                    and download headers\n",
     "               \n",
     "    returns: if return_results=True, returns local_filename and headers from\n",
@@ -539,45 +435,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The following sub-directory already exists and was not created: ../data/raw/noaa\n"
-     ]
-    }
-   ],
    "source": [
-    "make_subdir(os.path.join(parent_dir, 'noaa'))"
+    "## Subset data inventory into groups based on required download methods"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'boston-daily-weather-20140101-20191107.csv'"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "noaa_df['filename'].values[0]"
+    "# subset data inventory to separate include just 'downloads'\n",
+    "cols = ['sub-directory', 'filename', 'zipfile', 'data-url', 'source']\n",
+    "download_df = inventory_df.loc[inventory_df['access']=='download'][cols]\n",
+    "\n",
+    "# subset NOAA API query download information\n",
+    "noaa_df = inventory_df.loc[inventory_df['sub-directory']=='noaa'][cols]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download NOAA weather data with direct API url query"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +477,7 @@
     }
    ],
    "source": [
-    "results = download_file(\n",
+    "noaa_results = download_file(\n",
     "    subdir=os.path.join(parent_dir, 'noaa'),\n",
     "    url=noaa_df['data-url'].values[0],\n",
     "    filename=noaa_df['filename'].values[0],\n",
@@ -599,24 +486,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 33,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('../data/raw/noaa/boston-daily-weather-20140101-20191107.csv',\n",
-       " <http.client.HTTPMessage at 0x7f7ad60bbcd0>)"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "results"
+    "## Download files from Boston Analyze data sources\n",
+    "\n",
+    "This includes both \"data\" sources such as .csv and .xlsx files as well as \"shapefile\" .zip sources"
    ]
   },
   {
