data(noaa): add NOAA data download to .ipynb

--- a/notebooks/000_download_datasources.ipynb
+++ b/notebooks/000_download_datasources.ipynb
@@ -70,23 +70,23 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 47 entries, 0 to 46\n",
+      "RangeIndex: 48 entries, 0 to 47\n",
       "Data columns (total 13 columns):\n",
-      "id                  47 non-null int64\n",
-      "category            47 non-null object\n",
+      "id                  48 non-null int64\n",
+      "category            48 non-null object\n",
       "access              47 non-null object\n",
-      "source              45 non-null object\n",
-      "directory           47 non-null object\n",
-      "sub-directory       47 non-null object\n",
-      "filename            45 non-null object\n",
-      "zipfile             37 non-null float64\n",
-      "page-url            47 non-null object\n",
-      "data-url            45 non-null object\n",
-      "reference           33 non-null object\n",
-      "description         44 non-null object\n",
-      "access-confirmed    44 non-null object\n",
-      "dtypes: float64(1), int64(1), object(11)\n",
-      "memory usage: 4.9+ KB\n",
+      "source              46 non-null object\n",
+      "directory           48 non-null object\n",
+      "sub-directory       48 non-null object\n",
+      "filename            46 non-null object\n",
+      "zipfile             48 non-null int64\n",
+      "page-url            48 non-null object\n",
+      "data-url            48 non-null object\n",
+      "reference           34 non-null object\n",
+      "description         46 non-null object\n",
+      "access-confirmed    46 non-null object\n",
+      "dtypes: int64(2), object(11)\n",
+      "memory usage: 5.0+ KB\n",
       "None\n"
      ]
     },
@@ -136,7 +136,7 @@
        "      <td>raw</td>\n",
        "      <td>property</td>\n",
        "      <td>fy19-assessments</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>https://data.boston.gov/dataset/property-asses...</td>\n",
        "      <td>https://data.boston.gov/dataset/e02c44d2-3c64-...</td>\n",
        "      <td>, https://data.boston.gov/dataset/e02c44d2-3c6...</td>\n",
@@ -152,7 +152,7 @@
        "0   1  boston property assessments  download   data       raw      property   \n",
        "\n",
        "           filename  zipfile  \\\n",
-       "0  fy19-assessments      0.0   \n",
+       "0  fy19-assessments        0   \n",
        "\n",
        "                                            page-url  \\\n",
        "0  https://data.boston.gov/dataset/property-asses...   \n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,6 +456,220 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boston analyze summary of data sources to download:\n",
+      "\n",
+      "Number of files by type\n",
+      "\n",
+      "boston       18\n",
+      "shapefile    13\n",
+      "property      7\n",
+      "bpd-fio       5\n",
+      "crime         1\n",
+      "Name: sub-directory, dtype: int64\n",
+      "\n",
+      "44 total Boston analyze files for download.\n",
+      "\n",
+      "First five files listed in subsetted dataframe:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub-directory</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>zipfile</th>\n",
+       "      <th>data-url</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>property</td>\n",
+       "      <td>fy19-assessments</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://data.boston.gov/dataset/e02c44d2-3c64-...</td>\n",
+       "      <td>data</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>property</td>\n",
+       "      <td>fy18-assessments</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://data.boston.gov/dataset/e02c44d2-3c64-...</td>\n",
+       "      <td>data</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>property</td>\n",
+       "      <td>fy17-assessments</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://data.boston.gov/dataset/e02c44d2-3c64-...</td>\n",
+       "      <td>data</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>property</td>\n",
+       "      <td>fy16-assessments</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://data.boston.gov/dataset/e02c44d2-3c64-...</td>\n",
+       "      <td>data</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>property</td>\n",
+       "      <td>fy15-assessments</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://data.boston.gov/dataset/e02c44d2-3c64-...</td>\n",
+       "      <td>data</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  sub-directory          filename  zipfile  \\\n",
+       "0      property  fy19-assessments        0   \n",
+       "1      property  fy18-assessments        0   \n",
+       "2      property  fy17-assessments        0   \n",
+       "3      property  fy16-assessments        0   \n",
+       "4      property  fy15-assessments        0   \n",
+       "\n",
+       "                                            data-url source  \n",
+       "0  https://data.boston.gov/dataset/e02c44d2-3c64-...   data  \n",
+       "1  https://data.boston.gov/dataset/e02c44d2-3c64-...   data  \n",
+       "2  https://data.boston.gov/dataset/e02c44d2-3c64-...   data  \n",
+       "3  https://data.boston.gov/dataset/e02c44d2-3c64-...   data  \n",
+       "4  https://data.boston.gov/dataset/e02c44d2-3c64-...   data  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check subsetted groups\n",
+    "print('Boston analyze summary of data sources to download:\\n\\nNumber of files by type\\n')\n",
+    "print('{}\\n'.format(download_df['sub-directory'].value_counts()))\n",
+    "print('{} total Boston analyze files for download.\\n'.format(len(download_df)))\n",
+    "print('First five files listed in subsetted dataframe:')\n",
+    "download_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary of NOAA weather API data queries to download:\n",
+      "\n",
+      "2 total NOAA queries for download.\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sub-directory</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>zipfile</th>\n",
+       "      <th>data-url</th>\n",
+       "      <th>source</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>noaa</td>\n",
+       "      <td>boston-daily-summaries-20140101-20191107.csv</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.ncei.noaa.gov/access/services/data...</td>\n",
+       "      <td>data</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>noaa</td>\n",
+       "      <td>boston-local-climatological-data-20140101-2019...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.ncei.noaa.gov/access/services/data...</td>\n",
+       "      <td>data</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sub-directory                                           filename  zipfile  \\\n",
+       "44          noaa       boston-daily-summaries-20140101-20191107.csv        0   \n",
+       "45          noaa  boston-local-climatological-data-20140101-2019...        0   \n",
+       "\n",
+       "                                             data-url source  \n",
+       "44  https://www.ncei.noaa.gov/access/services/data...   data  \n",
+       "45  https://www.ncei.noaa.gov/access/services/data...   data  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check subsetted groups\n",
+    "print('Summary of NOAA weather API data queries to download:\\n')\n",
+    "print('{} total NOAA queries for download.\\n'.format(len(noaa_df)))\n",
+    "noaa_df"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -464,25 +678,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The following sub-directory was created: ../data/raw/noaa\n",
+      "Downloading ../data/raw/noaa data to ../data/raw/noaa/boston-daily-summaries-20140101-20191107.csv\n",
       "The following sub-directory already exists and was not created: ../data/raw/noaa\n",
-      "The following local file already exists and was not overwritten: ../data/raw/noaa/boston-daily-weather-20140101-20191107.csv\n"
+      "Downloading ../data/raw/noaa data to ../data/raw/noaa/boston-local-climatological-data-20140101-20191107.csv\n"
      ]
     }
    ],
    "source": [
-    "noaa_results = download_file(\n",
-    "    subdir=os.path.join(parent_dir, 'noaa'),\n",
-    "    url=noaa_df['data-url'].values[0],\n",
-    "    filename=noaa_df['filename'].values[0],\n",
-    "    return_results=True\n",
-    ")"
+    "# create `download_file` parameter lists for downloading NOAA data\n",
+    "subdirs_list = [\n",
+    "    os.path.join(parent_dir, subdir)\n",
+    "    for subdir in noaa_df['sub-directory'].values\n",
+    "]\n",
+    "\n",
+    "urls_list = [\n",
+    "    url\n",
+    "    for url in noaa_df['data-url'].values\n",
+    "]\n",
+    "\n",
+    "filenames_list = [\n",
+    "    filename\n",
+    "    for filename in noaa_df['filename'].values\n",
+    "]\n",
+    "\n",
+    "noaa_results = [\n",
+    "    download_file(\n",
+    "        subdir=subdir,\n",
+    "        url=url,\n",
+    "        filename=filename,\n",
+    "        verbose=True,\n",
+    "        return_results=True\n",
+    "    ) for subdir, url, filename in zip(\n",
+    "        subdirs_list, urls_list, filenames_list\n",
+    "    )\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Date: Mon, 11 Nov 2019 13:58:01 GMT\n",
+      "Server: Apache-Coyote/1.1\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "Content-Disposition: attachment; filename=\"daily-summaries-2019-11-11T08-58-01.csv\"\n",
+      "Content-Type: text/csv;charset=utf-8\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Access-Control-Allow-Headers: X-Requested-With, Content-Type\n",
+      "Connection: close\n",
+      "Transfer-Encoding: chunked\n",
+      "\n",
+      "\n",
+      "Date: Mon, 11 Nov 2019 13:58:04 GMT\n",
+      "Server: Apache-Coyote/1.1\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "Content-Disposition: attachment; filename=\"local-climatological-data-2019-11-11T08-58-05.csv\"\n",
+      "Content-Type: text/csv;charset=utf-8\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Access-Control-Allow-Headers: X-Requested-With, Content-Type\n",
+      "Connection: close\n",
+      "Transfer-Encoding: chunked\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for result in noaa_results:\n",
+    "    print(result[1])"
    ]
   },
   {
