eda(property): modify all year df columns to match

--- a/notebooks/010_EDA_boston_property_assessments.ipynb
+++ b/notebooks/010_EDA_boston_property_assessments.ipynb
@@ -224,11 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add columns to dataframes for years in which they are missing\n",
+    "# list of columns to add to dataframes for years in which they are missing\n",
     "add_columns_list = [\n",
     "    'LATITUDE', 'LONGITUDE', \n",
     "    'Location', 'full_address',\n",
@@ -244,7 +244,7 @@
     "    'U_VIEW',  'U_INT_FIN', 'U_BTH_STYLE2'\n",
     "]\n",
     "\n",
-    "# rename columns with variations in spelling to have consistent names\n",
+    "# mapping dict to rename column names with variations in spelling\n",
     "rename_columns_dict = {\n",
     "    'Parcel_ID': 'PID',\n",
     "    'OWNER_MAIL_ZIPCODE': 'MAIL_ZIPCODE',\n",
@@ -254,15 +254,134 @@
     "    'OWNER_MAIL_CS': 'MAIL CS',\n",
     "    'Owner_MAIL_CS': 'MAIL CS',\n",
     "    'U_KIT_TYPE': 'U_KITCH_TYPE',\n",
-    "}"
+    "}\n",
+    "\n",
+    "# list of columns to drop if they exist in df\n",
+    "drop_columns = ['Unnamed: 55']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# add columns to dataframes where they are missing\n",
+    "for year in prop_df_dict_keys:\n",
+    "    for column in add_columns_list:\n",
+    "        if column not in prop_df_dict[year]:\n",
+    "            prop_df_dict[year][column] = np.nan\n",
+    "\n",
+    "# remap column names in dataframes where there are variations in naming\n",
+    "for year in prop_df_dict_keys:\n",
+    "    prop_df_dict[year] = prop_df_dict[year].rename(columns=rename_columns_dict)\n",
+    "    \n",
+    "# drop bad columns in drop_columns list if they exist\n",
+    "for year in prop_df_dict_keys:\n",
+    "    prop_df_dict[year] = prop_df_dict[year].drop(columns=drop_columns, errors='ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fiscal year\tdataframe shape\n",
+      "\n",
+      "2013\t\t(165608, 80)\n",
+      "2014\t\t(164091, 80)\n",
+      "2015\t\t(168115, 80)\n",
+      "2016\t\t(169199, 80)\n",
+      "2017\t\t(170910, 80)\n",
+      "2018\t\t(172841, 80)\n",
+      "2019\t\t(174668, 80)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check results for matching df widths\n",
+    "# inspect df shapes and columns\n",
+    "print('fiscal year\\tdataframe shape\\n')\n",
+    "\n",
+    "for key in prop_df_dict_keys:\n",
+    "    print('{0}\\t\\t{1}'.format(key, prop_df_dict[key].shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Changes in dataframe column names by fiscal year assessment report:\n",
+      "\n",
+      "2014\n",
+      "  prior year columns removed:\n",
+      "   []\n",
+      "  current year columns added:\n",
+      "   []\n",
+      "\n",
+      "2015\n",
+      "  prior year columns removed:\n",
+      "   []\n",
+      "  current year columns added:\n",
+      "   []\n",
+      "\n",
+      "2016\n",
+      "  prior year columns removed:\n",
+      "   []\n",
+      "  current year columns added:\n",
+      "   []\n",
+      "\n",
+      "2017\n",
+      "  prior year columns removed:\n",
+      "   []\n",
+      "  current year columns added:\n",
+      "   []\n",
+      "\n",
+      "2018\n",
+      "  prior year columns removed:\n",
+      "   []\n",
+      "  current year columns added:\n",
+      "   []\n",
+      "\n",
+      "2019\n",
+      "  prior year columns removed:\n",
+      "   []\n",
+      "  current year columns added:\n",
+      "   []\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check year by year column diffs again\n",
+    "prop_df_columns_dict_check = {\n",
+    "    year: list(dataframe.columns)\n",
+    "    for year, dataframe in prop_df_dict.items() \n",
+    "}\n",
+    "\n",
+    "column_changes_by_year_check = {\n",
+    "    year: [\n",
+    "        list(set(prop_df_columns_dict_check[str(int(year)-1)]).difference(set(prop_df_columns_dict_check[year]))),\n",
+    "        list(set(prop_df_columns_dict_check[year]).difference(set(prop_df_columns_dict_check[str(int(year)-1)])))\n",
+    "    ] for year in prop_df_dict_keys[1:]\n",
+    "}\n",
+    "\n",
+    "print('Changes in dataframe column names by fiscal year assessment report:\\n')\n",
+    "for key in column_changes_by_year_check.keys():\n",
+    "    print(key)\n",
+    "    print('  prior year columns removed:\\n   {0}'.format(column_changes_by_year_check[key][0]))\n",
+    "    print('  current year columns added:\\n   {0}'.format(column_changes_by_year_check[key][1]))\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "code",
