eda(crime): fix offense group tables groupby

--- a/notebooks/009_EDA_crime_incident_reports.ipynb
+++ b/notebooks/009_EDA_crime_incident_reports.ipynb
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1595,7 @@
     "\n",
     "# create summary table of offense groups by group\n",
     "df_offense_groups = df_crime.groupby(\n",
-    "    ['OFFENSE_CODE_GROUP', 'OFFENSE_CODE']\n",
+    "    'OFFENSE_CODE_GROUP'\n",
     ").agg({\n",
     "    'INCIDENT_NUMBER': 'count',\n",
     "    'is_coord': sum\n",
