--- a/notebooks/chris_liquor_data_prep.ipynb
+++ b/notebooks/chris_liquor_data_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "[3 rows x 23 columns]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,17 +227,17 @@
        "(0.0, 0.0)                 423\n",
        "(42.347296, -71.081457)      5\n",
        "(42.35927, -71.05643)        3\n",
-       "(42.36629, -71.0622)         3\n",
        "(42.346219, -71.043099)      3\n",
-       "(42.348545, -71.077314)      2\n",
-       "(42.348075, -71.039263)      2\n",
+       "(42.36629, -71.0622)         3\n",
+       "(42.36203, -71.070362)       2\n",
        "(42.352166, -71.11768)       2\n",
-       "(42.314637, -71.104489)      2\n",
-       "(42.34716, -71.08251)        2\n",
+       "(42.34946, -71.08224)        2\n",
+       "(42.350916, -71.065256)      2\n",
+       "(42.35116, -71.13119)        2\n",
        "Name: Location, dtype: int64"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
        "[3 rows x 24 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "841\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(newCoordinates))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +594,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)#Need to briefly wait to avoid timeout\n",
+    "time.sleep(60)#Need to briefly wait to avoid timeout\n",
     "for val in df_liquor['Address_Complete'][45:90]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -588,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +617,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][90:135]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -611,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -623,7 +640,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][135:180]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -634,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +663,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][180:225]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -658,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -670,7 +687,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][225:270]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -682,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +711,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][270:315]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -706,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +735,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][315:360]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -730,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +759,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][360:405]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -754,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +783,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][405:450]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -778,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +807,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][450:495]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -802,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +831,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][495:540]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -826,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +855,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][540:585]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -850,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +879,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][585:630]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -874,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +903,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][630:675]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -898,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +927,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][675:720]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -922,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +951,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][720:765]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -946,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +975,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][765:810]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -970,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -982,7 +999,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][810:855]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -994,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +1023,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][855:900]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -1018,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1047,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][900:945]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -1042,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1071,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][945:990]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -1066,9 +1083,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1035\n"
+     ]
+    }
+   ],
    "source": [
     "time.sleep(45)\n",
     "for val in df_liquor['Address_Complete'][990:1035]:\n",
@@ -1082,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1119,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][1035:1080]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -1105,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1142,7 @@
     }
    ],
    "source": [
-    "time.sleep(45)\n",
+    "time.sleep(60)\n",
     "for val in df_liquor['Address_Complete'][1080:1125]:\n",
     "    geo = geolocator.geocode(val)\n",
     "    addresses.append(val)\n",
@@ -1143,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1320,7 +1345,7 @@
        "[3 rows x 25 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1344,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1420,7 +1445,7 @@
        "2         (42.3588444, -71.0572152)  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1431,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1465,7 @@
        "1109"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
