eda(crime): minor fix in choropleth plotting func

--- a/notebooks/009_EDA_crime_incident_reports.ipynb
+++ b/notebooks/009_EDA_crime_incident_reports.ipynb
@@ -1019,7 +1019,7 @@
     "# across shapes by shapetype\n",
     "\n",
     "def make_choropleth(gdf, variable, title, cb_label, cmap='Blues',\n",
-    "                    labels=True, savepath=None, citybounds=True):\n",
+    "                    labels=None, savepath=None, citybounds=True):\n",
     "    \"\"\"\n",
     "    plots choropleth\n",
     "    \n",
