adding school plot saved images

--- a/notebooks/chris_schools.ipynb
+++ b/notebooks/chris_schools.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
    ],
    "source": [
     "DATA_ROOT = '../data/'\n",
-    "FIGURES_ROOT = '../figures/crime'\n",
+    "FIGURES_ROOT = '../figures/schools'\n",
     "\n",
     "READDIR_ROOT = os.path.join(DATA_ROOT, 'raw')\n",
     "WRITEDIR_ROOT = os.path.join(DATA_ROOT, 'interim/crime')\n",
@@ -61,7 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mkdir for saving figures if they don't already exist\n",
+    "if not os.path.exists('../figures/schools'):\n",
+    "    os.mkdir('../figures/schools')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +217,7 @@
        "2  2.962122e+06  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +256,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -315,12 +326,13 @@
     "plt.grid(\":\", alpha=0.4)\n",
     "plt.legend(edgecolor='k', framealpha=1, fontsize=14)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('../figures/schools/publicK12Schools.png')\n",
     "plt.show();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +341,7 @@
        "82"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -380,12 +392,13 @@
     "plt.grid(\":\", alpha=0.4)\n",
     "plt.legend(edgecolor='k', framealpha=1, fontsize=14)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('../figures/schools/nonpublicK12Schools.png')\n",
     "plt.show();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -428,12 +441,13 @@
     "plt.grid(\":\", alpha=0.4)\n",
     "plt.legend(edgecolor='k', framealpha=1, fontsize=14)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('../figures/schools/publicAndPrivateK12Schools.png')\n",
     "plt.show();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -508,12 +522,13 @@
     "plt.grid(\":\", alpha=0.4)\n",
     "plt.legend(edgecolor='k', framealpha=1, fontsize=14)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('../figures/schools/collegeUniversities.png')\n",
     "plt.show();"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -559,6 +574,7 @@
     "plt.grid(\":\", alpha=0.4)\n",
     "plt.legend(edgecolor='k', framealpha=1, fontsize=14)\n",
     "plt.tight_layout()\n",
+    "plt.savefig('../figures/schools/allEducationInstitutions.png')\n",
     "plt.show();"
    ]
   }
