adding property violations plot saved fig

--- a/notebooks/chris_property_violations.ipynb
+++ b/notebooks/chris_property_violations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mkdir for saving figures if they don't already exist\n",
+    "if not os.path.exists('../figures/propertyViolations'):\n",
+    "    os.mkdir('../figures/propertyViolations')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +213,7 @@
        "2  (42.3409700000129, -71.0758000015981)  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +251,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,6 +323,7 @@
     "plt.grid(\":\", alpha=0.4)\n",
     "plt.legend(edgecolor='k', framealpha=1, fontsize=14)\n",
     "plt.tight_layout()\n",
+    "\n",
     "plt.show();"
    ]
   },
