--- a/notebooks/021_baseline_classifier_model.ipynb
+++ b/notebooks/021_baseline_classifier_model.ipynb
@@ -1300,7 +1300,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1345,9 +1347,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 6.96 s, sys: 20.1 ms, total: 6.98 s\n",
+      "Wall time: 6.38 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "solver = 'liblinear'\n",
+    "C = 1\n",
+    "max_iter = 10000\n",
+    "penalty = 'l1'\n",
+    "\n",
+    "# fit OVR model without L1 regularization\n",
+    "multi_class='ovr'\n",
+    "\n",
+    "LassoScaledOVRLogModel = LogisticRegression(\n",
+    "    C=C,\n",
+    "    solver=solver,\n",
+    "    max_iter=max_iter,\n",
+    "    multi_class=multi_class,\n",
+    "    random_state=20,\n",
+    "    penalty=penalty\n",
+    ").fit(X_train_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=10000,\n",
+       "                   multi_class='ovr', n_jobs=None, penalty='l1',\n",
+       "                   random_state=20, solver='liblinear', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LassoScaledOVRLogModel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.27257799671592775"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LassoScaledOVRLogModel.score(X_test_scaled, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-5.71533410e-02,  1.29521051e-01,  2.01398100e-01,\n",
+       "         1.63485492e-01,  1.68726982e-01,  6.43088766e-02,\n",
+       "         1.38074711e-01,  2.19824976e-01,  1.37258424e-01,\n",
+       "        -1.49169207e-03, -1.20432383e-02,  4.74923532e-02,\n",
+       "        -7.85223214e-02,  1.19224123e-02,  4.04188888e-02,\n",
+       "        -1.13628520e-01, -1.18608392e-01,  6.82036922e-01,\n",
+       "         1.96687853e-02, -2.67704684e-02, -9.99710754e-03,\n",
+       "        -2.19832770e-02,  2.41560722e-03,  5.03031102e-03,\n",
+       "         4.09759536e-02,  5.36620972e-03, -6.35182727e-02,\n",
+       "        -1.73046569e-02],\n",
+       "       [-8.61319880e-02, -4.55801364e-02, -1.19811106e-01,\n",
+       "         1.96380431e-02, -1.46078083e-01, -1.63880484e-01,\n",
+       "        -1.96026815e-02, -9.28340420e-02, -1.04679097e-01,\n",
+       "        -4.15742338e-02, -2.68463638e-02, -6.51325034e-02,\n",
+       "        -1.01453063e-01,  5.05181960e-02,  0.00000000e+00,\n",
+       "        -6.48272900e-02,  0.00000000e+00, -3.66089963e-03,\n",
+       "         4.33481430e-02, -7.84866771e-03,  9.67676038e-03,\n",
+       "        -1.45548581e-02,  5.47982211e-03, -1.75270652e-02,\n",
+       "         3.04910033e-02,  1.20347648e-03, -5.80530294e-02,\n",
+       "         6.60273962e-02],\n",
+       "       [ 2.56898176e-02,  1.17719594e-01,  1.45176529e-01,\n",
+       "         5.98913928e-02, -1.53948830e-01, -5.98145921e-01,\n",
+       "         9.30349541e-02,  2.10758445e-01,  3.02349547e-02,\n",
+       "         4.64581297e-02,  2.71599794e-02, -8.34658525e-02,\n",
+       "        -1.44160594e-01, -9.66670831e-02, -2.03541853e-01,\n",
+       "        -9.33589466e-02, -2.96476719e-01, -8.73377316e-01,\n",
+       "         1.39308471e-02,  4.07658827e-03,  2.68550962e-02,\n",
+       "        -8.03574956e-03, -9.14220594e-03, -1.28015962e-02,\n",
+       "         9.35581583e-03,  3.76973158e-03,  7.56712879e-03,\n",
+       "        -2.09143224e-02],\n",
+       "       [-4.83233555e-02, -4.33325819e-02, -1.12795173e-01,\n",
+       "        -3.30265771e-02, -3.96224336e-01, -6.23333884e-01,\n",
+       "         1.18092259e-01,  1.36254764e-02,  0.00000000e+00,\n",
+       "        -2.94779882e-02, -9.97221813e-02, -3.29792957e-02,\n",
+       "        -6.42437019e-02,  3.38165622e-02, -7.09328662e-02,\n",
+       "        -1.42176627e-02,  9.17681460e-03, -2.97397947e-01,\n",
+       "         1.34976415e-02,  2.24044125e-02, -4.58829789e-03,\n",
+       "        -7.05313914e-03,  2.80525214e-02, -2.17848631e-02,\n",
+       "         1.40067227e-02, -4.29271901e-03, -2.77471881e-02,\n",
+       "        -3.78292352e-03],\n",
+       "       [-4.36486339e-02, -5.81708587e-02, -4.71936857e-02,\n",
+       "        -1.21296322e-01, -6.89385384e-02,  6.00293209e-02,\n",
+       "        -2.46672210e-02, -6.86313472e-02, -1.72334004e-02,\n",
+       "        -4.61893402e-02, -5.45323115e-02, -2.27774374e-02,\n",
+       "        -6.24028010e-03,  2.26579369e-02, -2.57547027e-02,\n",
+       "        -6.50368523e-02, -1.25069468e-02,  9.14864712e-02,\n",
+       "        -6.77975439e-03, -1.74756265e-02, -3.57718661e-03,\n",
+       "         9.02120366e-03,  6.96408406e-03, -4.71988004e-03,\n",
+       "        -1.40611028e-02,  3.04920348e-03,  1.97375619e-02,\n",
+       "         3.78412676e-03],\n",
+       "       [ 1.34304419e-01,  3.11453043e-02,  1.10531432e-01,\n",
+       "        -4.18749535e-02, -1.32278302e-02,  1.43929456e-01,\n",
+       "        -1.31804292e-01, -1.86447595e-01, -1.91016986e-01,\n",
+       "        -1.20384661e-01, -1.41275497e-01, -1.27992832e-01,\n",
+       "        -2.28449141e-01, -5.62180680e-03,  1.16741259e-02,\n",
+       "        -9.14159783e-03,  1.90601641e-01,  7.67640652e-01,\n",
+       "         3.32975289e-02,  7.73824864e-03, -1.34396667e-03,\n",
+       "         3.09465818e-02,  1.25580176e-02,  2.85148619e-02,\n",
+       "         2.69985626e-02,  5.78958752e-03, -2.84767663e-02,\n",
+       "         5.36552695e-02],\n",
+       "       [ 3.06899166e-02, -2.92180527e-02, -4.76170991e-03,\n",
+       "         2.21806514e-02,  5.21272560e-02,  4.96203700e-02,\n",
+       "        -1.12368007e-01, -1.17883586e-01, -7.80054745e-02,\n",
+       "        -6.31916131e-02,  1.54454290e-02,  4.69828029e-02,\n",
+       "         8.03538828e-02,  3.71246944e-02,  5.20341849e-02,\n",
+       "         7.42005913e-02,  7.70378816e-02, -3.85252387e-01,\n",
+       "        -2.18025688e-03,  4.67015658e-03, -1.31104979e-03,\n",
+       "         6.64114231e-04, -3.97508330e-03,  8.88193742e-03,\n",
+       "         1.49351497e-02, -4.30161080e-03, -2.97378387e-05,\n",
+       "        -1.27389781e-03],\n",
+       "       [-3.23395594e-02, -3.66993538e-02, -9.71122087e-02,\n",
+       "        -3.16452660e-02,  1.02001947e-01,  1.93361764e-01,\n",
+       "         3.59376106e-02,  3.70164489e-02,  4.96888018e-02,\n",
+       "        -2.05080983e-02, -6.70316562e-02, -4.42566105e-02,\n",
+       "         1.19662832e-01, -4.50212793e-02,  2.10504666e-02,\n",
+       "         4.57331139e-02, -4.74821676e-02,  1.93855750e-01,\n",
+       "         2.30831068e-03,  9.94748349e-03, -7.63281672e-03,\n",
+       "         1.65505751e-02, -2.01341191e-02,  1.92263397e-03,\n",
+       "        -1.19396684e-02, -5.12157106e-03, -2.90417150e-02,\n",
+       "         6.38108003e-05],\n",
+       "       [ 4.59068085e-02,  2.60355296e-02,  2.09454924e-02,\n",
+       "         2.81984739e-02,  1.90317525e-01,  2.80475858e-01,\n",
+       "         8.35671995e-03,  2.33418911e-02,  8.82717812e-02,\n",
+       "         1.67414511e-01,  1.45676848e-01,  8.78540799e-02,\n",
+       "         2.76003927e-02, -2.35804859e-02,  7.48220399e-02,\n",
+       "         5.20584928e-02,  9.91841463e-02,  4.22850415e-01,\n",
+       "        -3.36545500e-02,  0.00000000e+00, -5.02143741e-03,\n",
+       "        -5.65478947e-03,  5.43604811e-04,  1.29348356e-02,\n",
+       "        -3.78105790e-02,  2.60283316e-03,  5.18574025e-02,\n",
+       "        -9.79070243e-03]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LassoScaledOVRLogModel.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 12s, sys: 16.1 ms, total: 1min 12s\n",
+      "Wall time: 1min 11s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "\n",
@@ -1357,34 +1556,169 @@
     "penalty = 'l1'\n",
     "\n",
     "# fit OVR model without L1 regularization\n",
-    "multi_class='ovr'\n",
+    "multi_class='multinomial'\n",
     "\n",
-    "LassoOVRLogModel = LogisticRegression(\n",
+    "LassoScaledMNLogModel = LogisticRegression(\n",
     "    C=C,\n",
     "    solver=solver,\n",
     "    max_iter=max_iter,\n",
     "    multi_class=multi_class,\n",
     "    random_state=20,\n",
     "    penalty=penalty\n",
-    ").fit(X_train, y_train)"
+    ").fit(X_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1, class_weight=None, dual=False, fit_intercept=True,\n",
+       "                   intercept_scaling=1, l1_ratio=None, max_iter=10000,\n",
+       "                   multi_class='multinomial', n_jobs=None, penalty='l1',\n",
+       "                   random_state=20, solver='saga', tol=0.0001, verbose=0,\n",
+       "                   warm_start=False)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "LassoOVRLogModel"
+    "LassoScaledMNLogModel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2730136389531182"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "LassoOVRLogModel.score(X_test, y_test)"
+    "LassoScaledMNLogModel.score(X_test_scaled, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-2.33277067e-02,  1.46111974e-01,  1.96147046e-01,\n",
+       "         1.39877092e-01,  1.74604969e-01,  1.99034694e-02,\n",
+       "         1.17744635e-01,  1.90031516e-01,  1.28190748e-01,\n",
+       "         2.25816609e-02,  6.62964401e-03,  7.56100717e-02,\n",
+       "        -1.53606465e-02,  0.00000000e+00,  1.83041360e-02,\n",
+       "        -9.46410284e-02, -1.15526858e-01,  5.64598915e-01,\n",
+       "         5.78523352e-03, -2.90467589e-02, -6.67892101e-03,\n",
+       "        -1.60602787e-02,  0.00000000e+00,  3.20476223e-03,\n",
+       "         2.74644434e-02,  2.96931394e-03, -3.41215681e-02,\n",
+       "        -1.51932215e-02],\n",
+       "       [-5.11250034e-02, -2.06773292e-02, -1.09378499e-01,\n",
+       "         3.65852156e-03, -1.28692131e-01, -2.06577021e-01,\n",
+       "        -2.46507783e-02, -9.88230146e-02, -9.62718693e-02,\n",
+       "        -6.63255451e-03,  0.00000000e+00, -2.59551469e-02,\n",
+       "        -3.18350425e-02,  4.05919151e-02, -1.18711228e-02,\n",
+       "        -4.23975171e-02,  0.00000000e+00, -8.15400514e-02,\n",
+       "         2.88208126e-02, -1.09824590e-02,  1.23804797e-02,\n",
+       "        -9.27272524e-03,  2.77386473e-03, -1.88184997e-02,\n",
+       "         1.81269008e-02, -6.17109638e-04, -2.95661037e-02,\n",
+       "         6.40641319e-02],\n",
+       "       [ 5.26770644e-02,  1.25458155e-01,  1.31734950e-01,\n",
+       "         3.71525718e-02, -1.31899881e-01, -6.07222698e-01,\n",
+       "         7.44338037e-02,  1.72740218e-01,  2.75321759e-02,\n",
+       "         7.13061021e-02,  4.93984302e-02, -4.05146039e-02,\n",
+       "        -6.56929507e-02, -9.55589503e-02, -2.02897019e-01,\n",
+       "        -6.56667552e-02, -2.70110983e-01, -8.82331443e-01,\n",
+       "         0.00000000e+00,  4.04866276e-04,  2.71014623e-02,\n",
+       "        -2.52067712e-03, -1.06433014e-02, -1.36048641e-02,\n",
+       "        -2.03712854e-03,  1.10333179e-03,  3.23275264e-02,\n",
+       "        -1.77541200e-02],\n",
+       "       [-1.40353998e-02, -1.76468287e-02, -9.92028260e-02,\n",
+       "        -4.60329291e-02, -3.58763159e-01, -6.36504170e-01,\n",
+       "         9.83620648e-02,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00, -6.91545590e-02,  0.00000000e+00,\n",
+       "         0.00000000e+00,  1.92872424e-02, -8.74063079e-02,\n",
+       "         0.00000000e+00,  3.65365052e-03, -3.57680414e-01,\n",
+       "         8.31640040e-05,  1.72936004e-02, -9.06237497e-04,\n",
+       "        -1.89526171e-03,  2.33674400e-02, -2.22476572e-02,\n",
+       "         2.33206528e-03, -6.20821696e-03,  0.00000000e+00,\n",
+       "        -2.54611773e-03],\n",
+       "       [-6.31189897e-03, -2.67219296e-02, -3.53033451e-02,\n",
+       "        -1.18009650e-01, -4.73197998e-02,  0.00000000e+00,\n",
+       "        -3.11451524e-02, -7.23122103e-02, -1.47351281e-02,\n",
+       "        -9.69435113e-03, -2.22662202e-02,  1.20317801e-02,\n",
+       "         5.49438326e-02,  7.11231844e-03, -4.12834960e-02,\n",
+       "        -3.90936504e-02, -1.30124696e-02,  0.00000000e+00,\n",
+       "        -1.83960718e-02, -1.81898920e-02,  0.00000000e+00,\n",
+       "         1.23221649e-02,  3.24187712e-03, -5.85453109e-03,\n",
+       "        -2.30027211e-02,  3.55758454e-04,  4.25886720e-02,\n",
+       "         4.17844771e-03],\n",
+       "       [ 1.60735137e-01,  5.22140609e-02,  1.11585753e-01,\n",
+       "        -5.67831215e-02,  0.00000000e+00,  9.90880026e-02,\n",
+       "        -1.36073944e-01, -1.93828950e-01, -1.82175955e-01,\n",
+       "        -8.47055686e-02, -1.11070828e-01, -8.90479389e-02,\n",
+       "        -1.58355645e-01, -1.48980712e-02,  0.00000000e+00,\n",
+       "         0.00000000e+00,  1.85758402e-01,  6.66920444e-01,\n",
+       "         1.95152611e-02,  3.70700718e-03,  7.08387739e-04,\n",
+       "         3.50434652e-02,  9.60006014e-03,  2.66459995e-02,\n",
+       "         1.48961058e-02,  3.53759087e-03, -1.83460258e-03,\n",
+       "         5.34484229e-02],\n",
+       "       [ 5.21169934e-02,  0.00000000e+00,  0.00000000e+00,\n",
+       "         0.00000000e+00,  4.60723535e-02, -1.78600060e-02,\n",
+       "        -9.16175302e-02, -9.96712157e-02, -5.64153569e-02,\n",
+       "        -1.60359385e-02,  3.62627852e-02,  6.74747671e-02,\n",
+       "         1.20552032e-01,  1.66483669e-02,  1.83698026e-02,\n",
+       "         7.04265992e-02,  5.32236016e-02, -3.65131756e-01,\n",
+       "        -1.41894588e-02,  0.00000000e+00,  2.18975844e-03,\n",
+       "         5.17090198e-03, -5.52498576e-03,  4.62844731e-03,\n",
+       "         0.00000000e+00, -5.35349992e-03,  2.57989919e-02,\n",
+       "         0.00000000e+00],\n",
+       "       [ 0.00000000e+00, -1.15638465e-02, -8.37271695e-02,\n",
+       "        -4.50380039e-02,  1.00771878e-01,  1.21187600e-01,\n",
+       "         2.18296770e-02,  1.85126894e-02,  4.46147764e-02,\n",
+       "         9.63503330e-03, -3.59171029e-02, -6.65686848e-03,\n",
+       "         1.68056606e-01, -5.14601877e-02,  9.99468767e-05,\n",
+       "         5.68287121e-02, -4.39360257e-02,  9.61954948e-02,\n",
+       "        -1.04601064e-02,  5.25716612e-03, -3.88120341e-03,\n",
+       "         1.95689798e-02, -2.05487706e-02,  0.00000000e+00,\n",
+       "        -2.19642351e-02, -6.72879638e-03,  0.00000000e+00,\n",
+       "         1.14202373e-03],\n",
+       "       [ 6.86907304e-02,  4.36869326e-02,  2.17864122e-02,\n",
+       "         7.59707446e-03,  1.69293440e-01,  1.83180601e-01,\n",
+       "         0.00000000e+00,  7.32476867e-03,  7.66229260e-02,\n",
+       "         1.70705528e-01,  1.47006191e-01,  1.08668229e-01,\n",
+       "         8.75760248e-02, -2.84712173e-02,  4.67236818e-02,\n",
+       "         6.19200281e-02,  8.40136422e-02,  2.69729605e-01,\n",
+       "        -4.07414281e-02, -3.62252610e-03, -1.25891849e-03,\n",
+       "         0.00000000e+00, -1.90962632e-03,  9.09187847e-03,\n",
+       "        -4.24740153e-02,  0.00000000e+00,  6.89275598e-02,\n",
+       "        -6.92829422e-03]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LassoScaledMNLogModel.coef_"
    ]
   },
   {
