eda(noaa): save basic cleansed NOAA data to interim folder

--- a/notebooks/018_EDA_NOAA_weather_data.ipynb
+++ b/notebooks/018_EDA_NOAA_weather_data.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Notebook 018: Initial EDA for NOAA Boston Weather Data\n",
+    "\n",
+    "This notebooks contains EDA and data cleansing for NOAA Boston weather data.\n",
+    "\n",
+    "A resulting cleansed dataset is saved to the interim data directory.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {},
@@ -45,16 +56,6 @@
     "\n",
     "readfile_daily = os.path.join(READDIR_ROOT, 'noaa/boston-daily-summaries-20140101-20191107.csv')\n",
     "readfile_local = os.path.join(READDIR_ROOT, 'noaa/boston-local-climatological-data-20140101-20191107.csv')\n",
-    "\n",
-    "# readfile_sam = os.path.join(READDIR_ROOT, 'boston/sam-addresses.csv')\n",
-    "# readfile_zipshapes = os.path.join(READDIR_ROOT, 'shapefile/zipcodes/ZIP_Codes.shp')\n",
-    "# readfile_cityshape = os.path.join(READDIR_ROOT, 'shapefile/city-boundary/City_of_Boston_Boundary.shp')\n",
-    "# readfile_streetshapes = os.path.join(READDIR_ROOT, 'shapefile/street-segments/Boston_Street_Segments.shp')\n",
-    "# readfile_tractshapes = os.path.join(READDIR_ROOT, 'shapefile/census-tracts/Census_2010_Tracts.shp')\n",
-    "# readfile_hoodshapes = os.path.join(READDIR_ROOT, 'shapefile/boston-neighborhoods/Boston_Neighborhoods.shp')\n",
-    "# readfile_zonesubshapes = os.path.join(READDIR_ROOT, 'shapefile/zoning-subdistricts/Zoning_Subdistricts.shp')\n",
-    "# readfile_openshapes = os.path.join(READDIR_ROOT, 'shapefile/open-spaces/Open_Space.shp')\n",
-    "# readfile_feat_property = os.path.join(FEATURES_ROOT, 'property-assessment-features-2013-2019.csv')\n",
     "\n",
     "print(\n",
     "    'readfile paths for datasets used in this notebook are:\\n\\t{}\\n\\t{}\\n\\t{}\\n\\t{}'.format(\n",
@@ -1029,6 +1030,22 @@
     "sns.set_context(font_scale=20, rc={\"axes.labelsize\":22})\n",
     "sns.pairplot(df_noaa.iloc[:,2:])\n",
     "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save cleansed data to NOAA interim data directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_noaa.to_csv(os.path.join(WRITEDIR_ROOT, 'boston-daily-weather-20140101-20190831.csv'))"
    ]
   },
   {
